--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,65 @@ body {
 
 ul, ol {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-a {text-decoration: none;}
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.container {
+max-width: 1158px;
+padding: 0 15px;
+margin: 0 auto;
+}
+
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+}
+
+.nav-header {
+    display: flex;
+    align-items: center;
+}
+
+.nav-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.contacts-list {
+    display: flex;
+    align-items: center;
+}
+
+.header-logo {
+padding: 24px 0;
+margin-right: 76px;
+}
+
+
 
 .main-page {
     background-color: #2E2F42;
+    width: 100%;
 }
 
 .nav-logo {
@@ -34,6 +87,8 @@ a {text-decoration: none;}
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    display: block;
+    padding: 24px 0;
 }
 
 .nav-link:hover,
@@ -43,6 +98,13 @@ a {text-decoration: none;}
 
 .contacts {
     font-style: normal;
+    margin-left: auto;
+}
+
+.contacts-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
 }
 
 .contacts-link {
@@ -51,6 +113,8 @@ a {text-decoration: none;}
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #434455;
+    display: block;
+    padding: 24px 0;
 }
 
 .contacts-link:hover,
@@ -58,14 +122,21 @@ a {text-decoration: none;}
     color: #404bbf;
 }
 
+.main-page-container {
+padding-top: 188px;
+padding-bottom: 188px;
+}
+
 .main-page-title {
-    
     color: #fff;
     font-weight: 700;
     font-size: 56px;
     line-height: 107%;
     text-align: center;
     letter-spacing: 0.02em;
+    margin: 0 auto;
+    margin-bottom: 48px;
+    max-width: 496px;
 }
 
 .main-page-button {
@@ -77,6 +148,12 @@ a {text-decoration: none;}
     color: #fff;
     cursor: pointer;
     background-color: #4d5ae5;
+    display: block;
+    padding: 16px 32px;
+    border-radius: 4px;
+    border: none;
+    margin: 0 auto;
+    height: 56px;
 }
 
 .main-page-button:hover,
@@ -84,13 +161,26 @@ a {text-decoration: none;}
     background-color: #404BBF
 }
 
+.sec-info {
+    padding: 120px 0;
+}
+
+.list-info {
+   display: flex;
+   gap: 24px;
+}
+
 .info-title {
-    font-weight: 500;
-    font-size: 20px;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    line-height: 1.2;
-    
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .list-title {
@@ -99,6 +189,12 @@ a {text-decoration: none;}
     line-height: 120%;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    width: calc((100% - 3 * 24px) / 3);
+}
+
+.team-list {
+    display: flex;
+    gap: 24px;
 }
 
 .list-text {
@@ -107,10 +203,13 @@ a {text-decoration: none;}
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #434455;
+    max-width: 264px;
+    margin-top: 8px;
 }
 
 .team {
     background-color: #F4F4FD;
+    padding: 120px 0;
 }
 
 .team-title {
@@ -121,10 +220,19 @@ a {text-decoration: none;}
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
+    margin: 0 auto;
+    margin-bottom: 72px;
 }
 
 .team-list-img {
     background-color: #FFFFFF;
+    width: calc((100% - 3 * 24px) / 4 );
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    border-radius: 0 0 4px 4px;
+}
+
+.team-minicon {
+    padding: 32px 0;
 }
 
 .team-name {
@@ -134,6 +242,7 @@ a {text-decoration: none;}
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
 .team-text {
@@ -145,6 +254,10 @@ a {text-decoration: none;}
     color: #434455;
 }
 
+.portfolio {
+    padding: 120px 0;
+}
+
 .portfolio-title {
     font-weight: 700;
     font-size: 36px;
@@ -153,6 +266,14 @@ a {text-decoration: none;}
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
+    padding-bottom: 120px ;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 24px;
 }
 
 .portfolio-subtitle {
@@ -161,6 +282,8 @@ a {text-decoration: none;}
     line-height: 120%;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-left: 16px;
+    margin-top: 32px;
 }
 
 .portfolio-text {
@@ -169,13 +292,24 @@ a {text-decoration: none;}
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #434455;
+    margin-left: 16px;
+    margin-top: 8px;
+}
+
+.portfolio-mincon {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
 }
 
 .footer {
     background-color: #2e2f42;
+    padding: 100px 0;
 }
 
 .footer-logo {
+    display: block;
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -183,6 +317,7 @@ a {text-decoration: none;}
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-bottom: 18px;
 }
 
 .footer-logo-studio {
@@ -195,4 +330,5 @@ a {text-decoration: none;}
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+    max-width: 264px;
 }
