--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,8 @@ margin-right: 76px;
 
 .main-page {
     background-color: #2E2F42;
-    width: 100%;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 
 .nav-logo {
@@ -154,6 +155,7 @@ padding-bottom: 188px;
     border: none;
     margin: 0 auto;
     height: 56px;
+    min-width: 169px
 }
 
 .main-page-button:hover,
@@ -161,7 +163,7 @@ padding-bottom: 188px;
     background-color: #404BBF
 }
 
-.sec-info {
+.section-info {
     padding: 120px 0;
 }
 
@@ -190,6 +192,7 @@ padding-bottom: 188px;
     letter-spacing: 0.02em;
     color: #2e2f42;
     width: calc((100% - 3 * 24px) / 3);
+    margin-bottom: 8px;
 }
 
 .team-list {
@@ -204,7 +207,6 @@ padding-bottom: 188px;
     letter-spacing: 0.02em;
     color: #434455;
     max-width: 264px;
-    margin-top: 8px;
 }
 
 .team {
@@ -266,7 +268,7 @@ padding-bottom: 188px;
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
-    padding-bottom: 120px ;
+    margin-bottom: 72px;
 }
 
 .portfolio-list {
@@ -282,8 +284,7 @@ padding-bottom: 188px;
     line-height: 120%;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    margin-left: 16px;
-    margin-top: 32px;
+    margin-bottom: 8px
 }
 
 .portfolio-text {
@@ -292,8 +293,6 @@ padding-bottom: 188px;
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #434455;
-    margin-left: 16px;
-    margin-top: 8px;
 }
 
 .portfolio-mincon {
@@ -309,7 +308,7 @@ padding-bottom: 188px;
 }
 
 .footer-logo {
-    display: block;
+    display: inline-block;
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -317,7 +316,7 @@ padding-bottom: 188px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    margin-bottom: 18px;
+    margin-bottom: 16px;
 }
 
 .footer-logo-studio {
